Прочитал Привидение из Простоквашино

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><img src="jpg/prostokvashino_10.jpg" title="Привидение из Простоквашино"></th>	
 <th><img src="jpg/sarychev.jpg" title="Гайд по здоровью"></th>		
 <th><img src="jpg/prostokvashino_8.jpg" title="Неприятности в Простоквашино"></th>	
 <th><img src="jpg/prostokvashino_7.jpg" title="Новые порядки в Простоквашино"></th>	
@@ -2389,10 +2390,16 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="https://flibusta.is/a/89487">Уоттлз Уоллес</a></h4></th>
-<th colspan="8"><h4><a href="https://flibusta.is/a/19863">Успенский Эдуард</a></h4></th>
-</tr><tr>  
+</tr><tr> 
 <th><img src="jpg/nauka_stat_bogatym.jpg" title="Наука стать богатым"></th>
 <th><img src="jpg/0.jpg"></th>	
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="10"><h4><a href="https://flibusta.is/a/19863">Успенский Эдуард</a></h4></th>
+</tr><tr>  
 <th><img src="jpg/prostokvashino_1.jpg" title="Дядя Фёдор, пёс и кот"></th>	
 <th><img src="jpg/prostokvashino_2.jpg" title="Зима в Простоквашино"></th>
 <th><img src="jpg/prostokvashino_3.jpg" title="Тётя дяди Фёдора"></th>
@@ -2401,6 +2408,7 @@
 <th><img src="jpg/prostokvashino_6.jpg" title="Праздники в деревне Простоквашино"></th>
 <th><img src="jpg/prostokvashino_7.jpg" title="Новые порядки в Простоквашино"></th>	
 <th><img src="jpg/prostokvashino_8.jpg" title="Неприятности в Простоквашино"></th>	
+<th><img src="jpg/prostokvashino_10.jpg" title="Привидение из Простоквашино"></th>	
 </tr></table>
 
 
