Прочитал Возвращение в СССР #50

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><a id="a284" src="jpg/revizor_50.jpg" title="Ревизор. Возвращение в СССР #50 (аудиокнига)"></a></th>	
 <th><img src="jpg/prostokvashino_10.jpg" title="Привидение из Простоквашино"></th>	
 <th><img src="jpg/sarychev.jpg" title="Гайд по здоровью"></th>		
 <th><img src="jpg/prostokvashino_8.jpg" title="Неприятности в Простоквашино"></th>	
@@ -1006,6 +1007,7 @@
 <th><a id="a275" src="jpg/revizor_47.jpg" title="Ревизор. Возвращение в СССР #47 (аудиокнига)"></a></th>	
 <th><a id="a276" src="jpg/revizor_48.jpg" title="Ревизор. Возвращение в СССР #48 (аудиокнига)"></a></th>
 <th><a id="a281" src="jpg/revizor_49.jpg" title="Ревизор. Возвращение в СССР #49 (аудиокнига)"></a></th>
+<th><a id="a284" src="jpg/revizor_50.jpg" title="Ревизор. Возвращение в СССР #50 (аудиокнига)"></a></th>	
 </tr></table>
 
 
