Прочитал Клад из деревни Простоквашино

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><img src="jpg/prostokvashino_9.jpg" title="Клад из деревни Простоквашино"></th>	
 <th><img src="jpg/prostokvashino_11.jpg" title="Дядя Фёдор и лето в Простоквашино"></th>	
 <th><a id="a284" src="jpg/revizor_50.jpg" title="Ревизор. Возвращение в СССР #50 (аудиокнига)"></a></th>	
 <th><img src="jpg/prostokvashino_10.jpg" title="Привидение из Простоквашино"></th>	
@@ -2411,8 +2412,9 @@
 <th><img src="jpg/prostokvashino_6.jpg" title="Праздники в деревне Простоквашино"></th>
 <th><img src="jpg/prostokvashino_7.jpg" title="Новые порядки в Простоквашино"></th>	
 <th><img src="jpg/prostokvashino_8.jpg" title="Неприятности в Простоквашино"></th>	
-<th><img src="jpg/prostokvashino_10.jpg" title="Привидение из Простоквашино"></th>
-<th><img src="jpg/prostokvashino_11.jpg" title="Дядя Фёдор и лето в Простоквашино"></th>	
+<th><img src="jpg/prostokvashino_9.jpg" title="Клад из деревни Простоквашино"></th>
+<th><img src="jpg/prostokvashino_10.jpg" title="Привидение из Простоквашино"></th> </th>	
+</tr> <th><img src="jpg/prostokvashino_11.jpg" title="Дядя Фёдор и лето в Простоквашино"></th>	
 </tr></table>
 
 
