--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
-
+<th><img src="jpg/slozhnye_podchinenye_1.jpg" title="Сложные подчиненные"></th>	
 <th><img src="jpg/prostokvashino_9.jpg" title="Клад из деревни Простоквашино"></th>	
 <th><a id="a285" src="jpg/temnaya_bashnya_3.jpg" title="Бесплодные земли (аудиокнига)"></a></th> 
 <th><img src="jpg/prostokvashino_11.jpg" title="Дядя Фёдор и лето в Простоквашино"></th>	
@@ -796,31 +796,32 @@
 
 
 <table><tr align="left"> 
-<th colspan="4"><h4><a href="http://flibusta.is/a/208731">Батырев Максим</a></h4></th>
+<th colspan="5"><h4><a href="http://flibusta.is/a/208731">Батырев Максим</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/149766">Белоусова Татьяна</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/32388"> Беннет Арнольд</a></h4></th>
-<th colspan="3"><h4><a href="http://flibusta.is/a/215022">Белинг Стив</a></h4></th>
 </tr><tr>
 <th><img src="jpg/45_taty.jpg" title="45 татуировок менеджера"></th>
 <th><img src="jpg/45_taty_lichnosti.jpg" title="45 татуировок личности"></th>
 <th><img src="jpg/45_taty_prodavana.jpg" title="45 татуировок продавана"></th>
+<th><img src="jpg/slozhnye_podchinenye_1.jpg" title="Сложные подчиненные"></th>	
 <th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/etiket_1.jpg" title="Этикет. Полный свод правил светского и делового общения"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/24.jpg" title="Как жить 24 часа в сутки"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/marvel_1.jpg" title="Мстители. Война Бесконечности. Путь героев"></th>
-<th><img src="jpg/marvel_2.jpg" title="Мстители. Финал. Путь героев"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="3"><h4><a href="http://flibusta.is/a/215022">Белинг Стив</a></h4></th>
 <th colspan="3"><h4><a href="http://flibusta.is/a/129573">Белфорт Джордан</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/239832">Берг Натали</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/1128">  Берджесс Энтони</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/33434"> Берн Ронда</a></h4></th>
 </tr><tr>
+<th><img src="jpg/marvel_1.jpg" title="Мстители. Война Бесконечности. Путь героев"></th>
+<th><img src="jpg/marvel_2.jpg" title="Мстители. Финал. Путь героев"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><a id="a33" src="jpg/volk_1.jpg" title="Волк с Уолл-стрит (аудиокнига)"></th> 
 <th><img src="jpg/metod_volka.jpg" title="Метод волка с Уолл-стрит. Откровения лучшего продавца в мире"></th>
 <th><img src="jpg/0.jpg"></th>
@@ -828,6 +829,13 @@
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a99" src="jpg/z_apelsin.jpg" title="Заводной апельсин (аудиокнига)"></th>
 <th><img src="jpg/0.jpg"></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/33434"> Берн Ронда</a></h4></th>
+</tr><tr>
 <th><a id="a45" src="jpg/the_secret.jpg" title="Тайна (аудиокнига)"></th>
 <th><img src="jpg/0.jpg"></th>
 </tr></table>
