Прочитал Тренируем мозг. Т №5

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><img src="jpg/mozg_tetrad_5.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №5"></th>
 <th><a id="a287" src="jpg/revizor_51.jpg" title="Ревизор. Возвращение в СССР #51 (аудиокнига)"></a></th>
 <th><a id="a286" src="jpg/pod_kypolom.jpg" title="Под Куполом (аудиокнига)"></a></th> 
 <th><img src="jpg/slozhnye_podchinenye_1.jpg" title="Сложные подчиненные"></th>	
@@ -1508,7 +1509,7 @@
 <th><img src="jpg/mozg_tetrad_2.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №2"></th>
 <th><img src="jpg/mozg_tetrad_3.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №3"></th>
 <th><img src="jpg/mozg_tetrad_4.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №4"></th>
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/mozg_tetrad_5.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №5"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a98" src="jpg/51_praktika.jpg" title="Маленькие привычки, большие успехи. 51 вдохновляющая практика, чтобы стать лучшей версией себя (аудиокнига)"></th>
 <th><img src="jpg/0.jpg"></th>
