--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><a id="a288" src="jpg/temnaya_bashnya_4.jpg" title="Колдун и кристалл (аудиокнига)"></a></th> 
 	<th><img src="data/02.2026.jpg"></th>
 <th><img src="jpg/mozg_tetrad_5.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №5"></th>
 <th><a id="a287" src="jpg/revizor_51.jpg" title="Ревизор. Возвращение в СССР #51 (аудиокнига)"></a></th>
@@ -1604,7 +1605,8 @@
 <th><a id="a286" src="jpg/pod_kypolom.jpg" title="Под Куполом (аудиокнига)"></a></th> 
 <th><img src="jpg/temnaya_bashnya_1.jpg" title="Стрелок"></th>
 <th><a id="a282" src="jpg/temnaya_bashnya_2.jpg" title="Извлечение троих (аудиокнига)"></a></th> 
-<th><a id="a285" src="jpg/temnaya_bashnya_3.jpg" title="Бесплодные земли (аудиокнига)"></a></th> 
+<th><a id="a285" src="jpg/temnaya_bashnya_3.jpg" title="Бесплодные земли (аудиокнига)"></a></th> </tr>
+<tr> <th><a id="a288" src="jpg/temnaya_bashnya_4.jpg" title="Колдун и кристалл (аудиокнига)"></a></th> 
 </tr></table>
 
 
