Прочитал Рождественские и новогодние мифы

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><a id="a289" src="jpg/rozhdestvenskie_mifi.jpg" title="Рождественские и новогодние мифы (аудиокнига)"></a></th> 
 <th><a id="a288" src="jpg/temnaya_bashnya_4.jpg" title="Колдун и кристалл (аудиокнига)"></a></th> 
 	<th><img src="data/02.2026.jpg"></th>
 <th><img src="jpg/mozg_tetrad_5.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №5"></th>
@@ -1989,10 +1990,12 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/334172">Москаленко Наталия</a></h4></th>	
 <th colspan="5"><h4><a href="https://flibusta.is/a/101599">Мрочковский Николай</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/195609">Маэда Джон</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/188732">Мэнсон Марк</a></h4></th>
 </tr><tr>  
+<th><a id="a289" src="jpg/rozhdestvenskie_mifi.jpg" title="Рождественские и новогодние мифы (аудиокнига)"></a></th> 
+<th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/extrim.jpg" title="Мрочковский Николай, Толкачев Алексей - Экстремальный тайм-менеджмент"></th>
 <th><a id="a29" src="jpg/ekstrim_menedzhment_2.jpg" title="Мрочковский Николай, Толкачев Алексей - Личная власть (аудиокнига)"></a></th>
 <th><img src="jpg/bistrie_rezultati.jpg" title="Мрочковский Николай, Парабеллум Андрей - Быстрые результаты. 10-дневная программа повышения личной эффективности"></th>
@@ -2000,55 +2003,57 @@
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/z_prostoti.jpg" title="Законы простоты"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/myzh_pravila.jpg" title="Мужские правила"></th>
-<th><a id="a135" src="jpg/tonkoe_iskusstvo.jpg" title="Тонкое искусство пофигизма. Парадоксальный способ жить счастливо (аудиокнига)"></a></th> 
-<th><a id="a277" src="jpg/vse_hrenovo.jpg" title="Всё хреново (аудиокнига)"></a></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="4"><h4><a href="https://flibusta.is/a/188732">Мэнсон Марк</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/152517">Наварро Джо</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/176671">Найт Фил</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/231715">Найтингейл Эрл</a></h4></th>
-<th colspan="4"><h4><a href="https://flibusta.is/a/201951">Непряхин Никита</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="https://flibusta.is/a/328796">Николаева Анна</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/myzh_pravila.jpg" title="Мужские правила"></th>
+<th><a id="a135" src="jpg/tonkoe_iskusstvo.jpg" title="Тонкое искусство пофигизма. Парадоксальный способ жить счастливо (аудиокнига)"></a></th> 
+<th><a id="a277" src="jpg/vse_hrenovo.jpg" title="Всё хреново (аудиокнига)"></a></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/navarro.jpg" title="Я вижу, о чём вы думаете"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/nike.jpg" title="Продавец обуви"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a44" src="jpg/strani_sekret.jpg" title="Самый странный секрет (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/nepriahin.jpg" title="Убеждай и Побеждай"></th>
-<th><img src="jpg/nepriahin_2.jpg" title="Я манипулирую тобой. Методы противодействия скрытому влиянию"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><a id="a279" src="jpg/slavyanskie_mifi.jpg" title="Славянские мифы (аудиокнига)"></a></th>	
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="3"><h4><a href="https://flibusta.is/a/201951">Непряхин Никита</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/328796">Николаева Анна</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/149079">Новак Алекс</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/9162">  Оруэлл Джордж</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/9261">  Паланик Чак</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/nepriahin.jpg" title="Убеждай и Побеждай"></th>
+<th><img src="jpg/nepriahin_2.jpg" title="Я манипулирую тобой. Методы противодействия скрытому влиянию"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><a id="a279" src="jpg/slavyanskie_mifi.jpg" title="Славянские мифы (аудиокнига)"></a></th>	
+<th><img src="jpg/0.jpg"></th>
 <th><a id="a21" src="jpg/kniga_kotoroi_net.jpg" title="Книга, которой нет (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/1984.jpg" title="1984"></th>
 <th><a id="a41" src="jpg/skotni_dvor.jpg" title="Скотный двор (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/boytsovskiy_klub.jpg" title="Бойцовский клуб"></th>
-<th><img src="jpg/0.jpg"></th>	
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/9261">  Паланик Чак</a></h4></th>
 <th colspan="6"><h4><a href="https://flibusta.is/a/24255"> Паолини Кристофер</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/140559">Папазан Джей</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/196223">Пезешкиан Хамид</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/boytsovskiy_klub.jpg" title="Бойцовский клуб"></th>
+<th><img src="jpg/0.jpg"></th>		
 <th><a id="a157" src="jpg/eragon_1.jpg" title="Эрагон (аудиокнига)"></a></th>
 <th><a id="a159" src="jpg/eragon_2.jpg" title="Эрагон. Возвращение (аудиокнига)"></a></th>
 <th><a id="a160" src="jpg/eragon_3.jpg" title="Эрагон. Брисингр (аудиокнига)"></a></th>
@@ -2057,19 +2062,19 @@
 <th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/nachni_s_glavnogo.jpg" title="Папазан Джей, Келлер Гэри  - Начни с главного!"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><a id="a116" src="jpg/psixovampiri.jpg" title="Психовампиры (аудиокнига)"></a></th>
-<th><img src="jpg/0.jpg"></th>	
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/196223">Пезешкиан Хамид</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/152613">Перси Аллан</a></h4></th>
 <th colspan="4"><h4><a href="https://flibusta.is/a/9658">  Пиз Аллан</a> и 
 					<a href="https://flibusta.is/a/9659">  Барбара</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/144350">Питерс Стив</a></h4></th>
-<th colspan="2"><h4>									   Платаниа Джон</h4></th>
 </tr><tr> 
+<th><a id="a116" src="jpg/psixovampiri.jpg" title="Психовампиры (аудиокнига)"></a></th>
+<th><img src="jpg/0.jpg"></th>		
 <th><a id="a77" src="jpg/enshtein.jpg" title="Правила жизни от Альберта Эйнштейна (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/yazyk_telodvizheniy.jpg" title="Язык телодвижений"></th>
@@ -2078,16 +2083,16 @@
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/shimpanze.jpg" title="Парадокс Шимпанзе. Менеджмент мозга"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/platania_1.jpg" title="Юнг для начинающих"></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>									   Платаниа Джон</h4></th>	
 <th colspan="7"><h4><a href="https://flibusta.is/a/9702">  По Эдгар Аллан</a></h4></th>	
-<th colspan="4"><h4><a href="https://flibusta.is/a/194679">Портнягин Дмитрий</a></h4></th>
 </tr><tr> 
+<th><img src="jpg/platania_1.jpg" title="Юнг для начинающих"></th>
+<th><img src="jpg/0.jpg"></th>	
 <th><a id="a125" src="jpg/po_1.jpg" title="Преждевременное погребение (аудиокнига)"></a></th>
 <th><a id="a129" src="jpg/po_5.jpg" title="Овальный портрет (аудиокнига)"></a></th>
 <th><a id="a130" src="jpg/po_6.jpg" title="Тайна Мари Роже (аудиокнига)"></a></th>
@@ -2095,36 +2100,36 @@
 <th><a id="a126" src="jpg/po_2.jpg" title="Разговор с мумией (аудиокнига)"></a></th>
 <th><a id="a127" src="jpg/po_3.jpg" title="Чёрный кот (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
-<th><a id="a19" src="jpg/transformator.jpg" title="Трансформатор (аудиокнига)"></a></th> 
-<th><img src="jpg/transformator_2.jpg" title="Трансформатор 2. Как развить скорость в бизнесе и не сгореть"></th>
-<th><a id="a39" src="jpg/transformator_3.jpg" title="В чем сила, бро (аудиокнига)"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="4"><h4><a href="https://flibusta.is/a/194679">Портнягин Дмитрий</a></h4></th>	
 <th colspan="2"><h4><a href="https://flibusta.is/a/9914">  Прайор Карен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/28700"> Прессфилд Стивен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/234280">Примаченко Ольга</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/9956">  Прист Кристофер</a></h4></th>
 </tr><tr> 
+<th><a id="a19" src="jpg/transformator.jpg" title="Трансформатор (аудиокнига)"></a></th> 
+<th><img src="jpg/transformator_2.jpg" title="Трансформатор 2. Как развить скорость в бизнесе и не сгореть"></th>
+<th><a id="a39" src="jpg/transformator_3.jpg" title="В чем сила, бро (аудиокнига)"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><a id="a13" src="jpg/ne_ruchite_na_sobaky.jpg" title="Не рычите на собаку! (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/voina_za_kreativ.jpg" title="Война за креатив. Как преодолеть внутренние барьеры и начать творить"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/s_toboi.jpg" title="С тобой я дома. Книга о том, как любить друг друга, оставаясь верными себе"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/prestizh.jpg" title="Престиж"></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="7"><h4><a href="https://flibusta.is/a/9242"> Пьюзо Марио</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/550918">Разуваев Владимир</a></h4></th>
-<th colspan="1"><h4><a href="http://flibusta.is/a/44512"> Райан Мэг</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/9956">Прист Кристофер</a></h4></th>	
+<th colspan="7"><h4><a href="https://flibusta.is/a/9242">Пьюзо Марио</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/prestizh.jpg" title="Престиж"></th>
+<th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/pervi_don.jpg" title="Первый дон"></th>	
 <th><img src="jpg/godfather_1.jpg" title="Пьюзо Марио и Фалько Эд - Семья Корлеоне"></th>
 <th><img src="jpg/godfather_2.jpg" title="Крестный отец"></th>
@@ -2132,23 +2137,32 @@
 <th><img src="jpg/duraki_umirayut.jpg" title="Дураки умирают"></th>
 <th><img src="jpg/omerta.jpg" title="Омерта"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/ironman.jpg" title="Ironman: история, а не истерия"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/v_etom_gody.jpg" title="В этом году я…"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/550918">Разуваев Владимир</a></h4></th>
+<th colspan="2"><h4><a href="http://flibusta.is/a/44512"> Райан Мэг</a></h4></th>	
 <th colspan="2"><h4><a href="http://flibusta.is/a/100117">Рей Александр</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/19953">Ремарк Эрих Мария</a></h4></th>
-<th colspan="4"><h4><a href="http://flibusta.is/a/57592"> Рив Филип</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/ironman.jpg" title="Ironman: история, а не истерия"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/v_etom_gody.jpg" title="В этом году я…"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/pystishka.jpg" title="Пустышка"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/vremya_zhit_i_vremya_umirat.jpg" title="Время жить и время умирать"></th>
 <th><img src="jpg/na_zapadnom_fronte_bez_peremen.jpg" title="На Западном фронте без перемен"></th>
 <th><img src="jpg/0.jpg"></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="4"><h4><a href="http://flibusta.is/a/57592"> Рив Филип</a></h4></th>
+</tr><tr>  
 <th><img src="jpg/hischni_gorod_1.jpg" title="Смертные Машины"></th>
 <th><img src="jpg/hischni_gorod_2.jpg" title="Золото хищников"></th>
 <th><img src="jpg/hischni_gorod_3.jpg" title="Адские конструкции"></th>
