--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+<th><img src="jpg/lomovoi_ne_kniga.jpg" title="НЕкнига НЕстихов"></th>	
 <th><img src="jpg/lomovoi_top_100.jpg" title="Ломовой ТОП-100"></th>
 <th><a id="a289" src="jpg/rozhdestvenskie_mifi.jpg" title="Рождественские и новогодние мифы (аудиокнига)"></a></th> 
 <th><a id="a288" src="jpg/temnaya_bashnya_4.jpg" title="Колдун и кристалл (аудиокнига)"></a></th> 
@@ -1836,11 +1837,12 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4><a href="https://flibusta.is/a/182228">Ломовой Олег</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/182228">Ломовой Олег</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/7443">  Лондон Джек</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/47863"> Лоэр Джим</a></h4></th>
 </tr><tr> 
 <th><img src="jpg/lomovoi_top_100.jpg" title="Ломовой ТОП-100"></th>
+<th><img src="jpg/lomovoi_ne_kniga.jpg" title="НЕкнига НЕстихов"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a170" src="jpg/sila_silnih.jpg" title="Сила сильных (сборник) (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
