Прочитал Возвращение в СССР #52

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <button id="toggle-recent-2026">2026&nbsp;•</button><button id="toggle-recent-2025">&nbsp;2025&nbsp;•</button><button id="toggle-recent-2024">&nbsp;2024&nbsp;•</button><button id="toggle-recent-2023">&nbsp;2023&nbsp;•</button><button id="toggle-recent-2022">&nbsp;2022&nbsp;•</button><button id="toggle-recent-2021">&nbsp;2021&nbsp;•</button><button id="toggle-recent-2020">&nbsp;2020</button></h4>
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
+
+<th><a id="a291" src="jpg/revizor_52.jpg" title="Ревизор. Возвращение в СССР #52 (аудиокнига)"></a></th>
 <th><a id="a290" src="jpg/temnaya_bashnya_4.5.jpg" title="Ветер сквозь замочную скважину (аудиокнига)"></a></th> 	
 <th><img src="jpg/lomovoi_ne_kniga.jpg" title="НЕкнига НЕстихов"></th>	
 <th><img src="jpg/lomovoi_top_100.jpg" title="Ломовой ТОП-100"></th>
@@ -1030,6 +1032,7 @@
 <th><a id="a281" src="jpg/revizor_49.jpg" title="Ревизор. Возвращение в СССР #49 (аудиокнига)"></a></th>
 <th><a id="a284" src="jpg/revizor_50.jpg" title="Ревизор. Возвращение в СССР #50 (аудиокнига)"></a></th> </tr>
 <tr> <th><a id="a287" src="jpg/revizor_51.jpg" title="Ревизор. Возвращение в СССР #51 (аудиокнига)"></a></th>
+<th><a id="a291" src="jpg/revizor_52.jpg" title="Ревизор. Возвращение в СССР #52 (аудиокнига)"></a></th>
 </tr></table>
 
 
