Прочитал Волки Кальи

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div id="recent-container-2026"><div id="block"><table id="recent-table-2026"><tr></tr>
 	<th><img src="data/2026.jpg"></th>
 
+<th><a id="a292" src="jpg/temnaya_bashnya_5.jpg" title="Волки Кальи (аудиокнига)"></a></th> 		
 <th><a id="a291" src="jpg/revizor_52.jpg" title="Ревизор. Возвращение в СССР #52 (аудиокнига)"></a></th>
 <th><a id="a290" src="jpg/temnaya_bashnya_4.5.jpg" title="Ветер сквозь замочную скважину (аудиокнига)"></a></th> 	
 <th><img src="jpg/lomovoi_ne_kniga.jpg" title="НЕкнига НЕстихов"></th>	
@@ -1615,6 +1616,7 @@
 <th><a id="a285" src="jpg/temnaya_bashnya_3.jpg" title="Бесплодные земли (аудиокнига)"></a></th> </tr>
 <tr> <th><a id="a288" src="jpg/temnaya_bashnya_4.jpg" title="Колдун и кристалл (аудиокнига)"></a></th> 
 <th><a id="a290" src="jpg/temnaya_bashnya_4.5.jpg" title="Ветер сквозь замочную скважину (аудиокнига)"></a></th> 	
+<th><a id="a292" src="jpg/temnaya_bashnya_5.jpg" title="Волки Кальи (аудиокнига)"></a></th> 
 </tr></table>
 
 
